syntax = "proto3";

service ContactService {
  rpc AddContact (AddContactReq) returns (AddContactRep);
  rpc GetContact (GetContactReq) returns (Contact);
  rpc SearchContact (SearchContactReq) returns (ContactList);
}

message AddContactReq {
  string name = 1;
  string phone = 2;
}

message AddContactRep {
  string message = 1;
}

message GetContactReq {
  int32 id = 1;
}

message Contact {
  string id = 1;
  string name = 2;
  string phone = 3;
}

message ContactList {
  repeated Contact contact = 1;
}

message SearchContactReq {
  string q = 1;
  int32 limit = 2;
  int32 page = 3;
}